	* ezgui.c: Fixed the bug which generating screenshot with wrong
	attribution if some videoes were removed from the list control.
	Root Cause: The REMOVEITEM only affective after the list control has
	been mapped. Therefore the virtual list can not remove its contents,
	which caused the filename list couldn't match with the attribution
	list.

20170510:
	* configure.ac: added tests for	HAVE_AVFRAME_PKT_PTS, HAVE_AVFRAME_BEST_ETS,
	HAVE_GD_USE_FONTCONFIG and HAVE_GD_IMAGE_GIFANIMATION
	* ezthumb.h: EZOPT.img_format changed to integer type
	* ezgui.c: Fixed the bug which failed to save to png and gif.
	* ezthumb.h: EZOPT.suffix expands to 256
	* ezgui.c: Fixed the bug which failed to save the suffix to the config file.
	* ezgui.c: Fixed the bug which failed to save to the specified path.

20170505: 3.6.1
	* ezthumb.nsi: added a section to add to context menu (Win32).

20170419:
	* IUP: updated to 3.21 to workaround the missing GTK icons.
	* IUP: using the officially distributed WIN32 libs from IUP home page.
	- It looks the "IUP_MessageInfo" issue is persistent.

20170411: 3.6.0
	* GNU autoconf: Added configure.ac, Makefile.am and other supportives
	* IUP: Modified the buildsys to fit into autoconf.
	* ezconfig: Been outdated by autoconf.
	* id_lookup.c: Removed the codec table because it's jumping around
	different ffmpeg versions.
	* libav: should be supported now.
	* ezgui.c: normalized the button height because in gtk3 the icon size
	diffs.

20170310: 3.5.0
	* ezgui.c: Added a progress bar dialog for integrating with file managers.

20160809: release 3.4.1
	* Added factory reset
	* IUP updated to 3.10.1
	* Fixed the progress bar overlap status bar issue
	* Fixed the utf-8 filename issue in Windows
	* Fixed the core dump when verbose level reach 7
	* Fixed the failure of removing registry in Windows.
	
20160809:
	* libcsoup: updated to 0.9.6
	which fixed two issue: the dead loop in csc_cdll that caused core dump